# -myika-unreal

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MYIKA_UNREAL_DEMO_SPEC.md  README.md  ROADMAP.md  SECURITY.md  commitlint.config.cjs  test_tool_request.cjs
.claude/: session-start.md  settings.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
desktop/: .env.example  index.html  mcp-bridge-server.mjs  mcp-config.json  package-lock.json  package.json  tailwind.config.js
desktop/src/: App.tsx  main.tsx
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/src/: bridge.rs  claude.rs  db.rs  lib.rs  main.rs  run_journal.rs  tool_proxy.rs  tools.rs
desktop/src/components/: BridgeStatus.tsx  Chat.tsx  Icon.tsx  Message.tsx  PlanReview.tsx  Settings.tsx  ToastContainer.tsx
desktop/src/lib/: ipc.ts  useBridgeStatus.ts
docs/: ARCHITECTURE.md  BRIDGE_PROTOCOL.md  DAY12_PLAN.md  LESSONS.md  PRIMITIVES_BACKLOG.md  TOOL_REFERENCE.md
docs/RESEARCH/: blueprintue_plugin.md
docs/SKILLS/: pulsing_light.md
docs/design/: llm-provider-abstraction.md
tests/: door-scenario-runs.md  plan-proxy-test.mjs  reset-baseline.ps1  reset-blink-baseline.ps1  reset-pulse-baseline.ps1  run-blink-gate.ps1  run-door-gate.ps1  run-pulse-gate.ps1  stress-test.mjs  verify-read-blueprint-summary.mjs
tests/python/: diag_rbs.py  summarize_journals.mjs  verify_rbs.py
ue-plugin/MyikaBridge/: MyikaBridge.uplugin
(+64 files in other folders)
