[package]
name = "myika-desktop"
version = "0.1.0"
edition = "2021"

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.26"
reqwest = { version = "0.12", features = ["json"] }
rusqlite = { version = "0.32", features = ["bundled"] }
uuid = { version = "1", features = ["v4"] }
futures-util = "0.3"
log = "0.4"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[lib]
name = "myika_desktop_lib"
crate-type = ["lib", "cdylib", "staticlib"]
